<resources>
    <string name="app_name">MyApplication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="already_registered">Already registered! Login Me</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>